# CFI

./: Makefile  README.md  example.py  pyproject.toml
.github/workflows/: test.yaml
cfi/: CellFunctionality.py  CellGraph.py  __init__.py
cfi_toolkit/: CellFunctionality.py  CellGraph.py  __init__.py
data/s1/: barcodes.tsv  matrix.mtx
data/s2/: barcodes.tsv  genes.tsv  matrix.mtx
docs/: cfi.html  cfi_toolkit.html  index.html  search.js
docs/cfi/: CellFunctionality.html  CellGraph.html
docs/cfi_toolkit/: CellFunctionality.html  CellGraph.html
fig/: cell_con.csv  cell_int.csv  comparison.csv  go.csv  kegg.csv  reactome.csv  spec.csv
tests/: test.py
